@@ -12,24 +12,25 @@
         <encoding>UTF-8</encoding>
         <maven.compiler.release>13</maven.compiler.release>
         <h2.version>1.4.200</h2.version>
+        <version.jfx>13</version.jfx>
     </properties>
     <dependencies>
         <!-- UI libraries -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx</artifactId>
-            <version>13</version>
+            <version>${version.jfx}</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13</version>
+            <version>${version.jfx}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13</version>
+            <version>${version.jfx}</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -65,6 +66,13 @@
             <version>${h2.version}</version>
             <scope>runtime</scope>
         </dependency>
+
+        <!-- Util libraries -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -85,18 +93,17 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--add-opens</arg><arg>javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg><arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls</arg>
-                        <arg>--add-exports</arg><arg>javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
-                    </compilerArgs>
                     <commandlineArgs>
-                        --add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED
+                        --add-modules=javafx.controls,javafx.fxml
+                        --add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED
+                        --add-opens=javafx.graphics/javafx.css=ALL-UNNAMED
                         --add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
                         --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED
                     </commandlineArgs>
                     <options>
-                        <option>--add-opens</option><option>javafx.controls/javafx.scene.control.skin=ALL-UNNAMED</option>
+                        <option>--add-modules</option><option>javafx.controls,javafx.fxml</option>
+                        <option>--add-opens</option><option>javafx.controls/javafx.scene.control=ALL-UNNAMED</option>
+                        <option>--add-opens</option><option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                         <option>--add-exports</option><option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                         <option>--add-exports</option><option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                     </options>
